--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,118 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  outline: 0;
+}
+body {
+  background: #d8dcf2;
+  width: 100vw;
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+    width: 100%;
+    padding: 1rem 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: .5rem;
+    background-color: #fff;
 }
+.form-group {
+    display: flex;
+    flex-direction: column;
+    gap: .2rem;
+    color: #777;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
+input {
+  padding: 5px;
+  text-indent: 5px;
+}
+.btn {
+    padding: 1rem .5rem;
+    background: rgba(8, 35, 186, 0.864);
+    border-radius: 10px;
+    border: none;
+    text-align: center;
+    color: #fff;
+    cursor: pointer;
+}
+.btn:hover {
+    background: rgba(8, 35, 186, 0.641);
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+}
+.container {
+    /* max-width: 900px; */
+    margin: 1rem ;
+}
+.quizCardList {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 1rem;
+}
+/*
+.cards {
+    background: #fff;
+    color: #000;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+.cards .front ,
+.cards .back {
+    display: flex;
+    flex-direction: column;
+    backface-visibility: hidden;
+    transform: translateX(360deg);
+} */
+
+.card {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  position: relative;
+  border-radius: 5px;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.342);
+  background: #fff;
+  transform-style: preserve-3d;
+  transition: 200ms;
+  cursor: pointer;
+  transform: perspective(1000px) rotateY(var(--rotate-y, 0))
+    translateY(var(--translate-y, 0));
 }
-
-.App-link {
-  color: #61dafb;
+.card:hover {
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5);
+  --translate-y: -2px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card.flip {
+  --rotate-y: 180deg;
+}
+.card .front {
+  left: 0;
+}
+.card .front,
+.card .back {
+  position: absolute;
+  padding: 1rem;
+  backface-visibility: hidden;
+  font-weight: 600;
+}
+.card .back {
+  transform: rotateY(180deg);
+}
+.card .quizcard_options {
+  margin-top: 0.5rem;
+}
+.card .quizCard_option {
+  margin-top: 0.3rem;
+  font-size: 0.84rem;
+  color: #8a91b1;
+}
+.card .quizcard_option:first-child {
+  margin-top: 0;
 }
